--- a/app/globals.css
+++ b/app/globals.css
@@ -5,36 +5,36 @@
 @layer base {
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/plus-jakarta-bold.woff2') format('woff2');
+		src: url('../public/fonts/dm-sans-bold.woff2') format('woff2');
 		font-weight: 700;
 		font-display: swap;
 		font-style: normal;
 	}
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/plus-jakarta-italic.woff2') format('woff2');
+		src: url('../public/fonts/dm-sans-italic.woff2') format('woff2');
 		font-weight: 400;
 		font-display: swap;
 		font-style: italic;
 	}
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/plus-jakarta-regular.woff2') format('woff2');
+		src: url('../public/fonts/dm-sans-regular.woff2') format('woff2');
 		font-weight: 400;
 		font-display: swap;
 		font-style: normal;
 	}
 	@font-face {
 		font-family: 'heading';
-		src: url('../public/fonts/Raleway-Extrabold.woff2') format('woff2');
-		font-weight: 800;
+		src: url('../public/fonts/wotfard-bold.woff2') format('woff2');
+		font-weight: 700;
 		font-display: swap;
 		font-style: normal;
 	}
 	@font-face {
 		font-family: 'heading';
-		src: url('../public/fonts/Raleway-Bold.woff2') format('woff2');
-		font-weight: 700;
+		src: url('../public/fonts/wotfard-medium.woff2') format('woff2');
+		font-weight: 500;
 		font-display: swap;
 		font-style: normal;
 	}
@@ -204,9 +204,14 @@
 		@apply bg-gray-100 w-full desktop:max-w-5xl mx-auto;
 	}
 
-	.container {
+	.container-header {
 		@apply mx-auto grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
 	}
+
+	.container {
+		@apply mx-auto pt-[156px] desktop:pt-[272px] grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
+	}
+
 	.responsive-sections {
 		@apply col-start-1 col-span-4 tablet:col-start-2 tablet:col-span-6 desktop:col-start-3 desktop:col-span-8;
 	}
