--- a/public/styles.css
+++ b/public/styles.css
@@ -796,6 +796,20 @@ body::selection {
   }
 }
 
+.\!p-base {
+  font-size: .938rem;
+  line-height: 180%;
+  font-weight: 400;
+}
+
+@media (min-width: 768px) {
+  .\!p-base {
+    font-size: 1.063rem;
+    line-height: 180%;
+    font-weight: 400;
+  }
+}
+
 .p-large {
   font-size: 1.125rem;
   line-height: 180%;
@@ -1118,74 +1132,6 @@ body::selection {
   background-color: hsl(var(--gray-200), var(--tw-bg-opacity));
 }
 
-.hero-blue {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-blue {
-    grid-column: span 6 / span 6;
-    grid-column-start: 2;
-    margin-left: -4rem;
-    margin-right: -4rem;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-@media (min-width: 1248px) {
-  .hero-blue {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-  }
-}
-
-.hero-blue {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-blue {
-    grid-column: span 6 / span 6;
-    grid-column-start: 2;
-    margin-left: -4rem;
-    margin-right: -4rem;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-@media (min-width: 1248px) {
-  .hero-blue {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-  }
-}
-
-.hero-blue {
-  border-color: hsl(var(--blue-900), 5%);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--blue-200), var(--tw-bg-opacity));
-}
-
 .hero-mini-green {
   grid-column: span 4 / span 4;
   grid-column-start: 1;
@@ -1368,10 +1314,6 @@ body::selection {
   inset: -0px;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .bottom-6 {
   bottom: 1.5rem;
 }
@@ -1501,12 +1443,16 @@ body::selection {
   height: 2rem;
 }
 
-.h-\[1\/2\] {
-  height: 1/2;
-}
-
 .h-full {
   height: 100%;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-32 {
+  height: 8rem;
 }
 
 .w-14 {
@@ -1519,6 +1465,10 @@ body::selection {
 
 .w-full {
   width: 100%;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .grow {
@@ -1563,6 +1513,10 @@ body::selection {
   grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1601,6 +1555,10 @@ body::selection {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -1663,13 +1621,17 @@ body::selection {
   border-color: hsl(var(--gray-800), 5%);
 }
 
-.border-gray-900 {
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--gray-900), var(--tw-border-opacity));
-}
-
 .border-gray-900\/\[8\%\] {
   border-color: hsl(var(--gray-900), 8%);
+}
+
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--gray-100), var(--tw-border-opacity));
+}
+
+.border-gray-900\/\[5\%\] {
+  border-color: hsl(var(--gray-900), 5%);
 }
 
 .bg-gray-100 {
@@ -1677,8 +1639,8 @@ body::selection {
   background-color: hsl(var(--gray-100), var(--tw-bg-opacity));
 }
 
-.bg-gray-100\/90 {
-  background-color: hsl(var(--gray-100), 0.9);
+.bg-gray-100\/80 {
+  background-color: hsl(var(--gray-100), 0.8);
 }
 
 .bg-gray-200 {
@@ -1700,8 +1662,8 @@ body::selection {
   background-color: hsl(var(--purple-300), var(--tw-bg-opacity));
 }
 
-.bg-gray-100\/80 {
-  background-color: hsl(var(--gray-100), 0.8);
+.bg-gray-900\/\[1\.5\%\] {
+  background-color: hsl(var(--gray-900), 1.5%);
 }
 
 .fill-base-white {
@@ -1714,6 +1676,10 @@ body::selection {
 
 .fill-gray-900 {
   fill: hsl(var(--gray-900), 1);
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-10 {
@@ -1736,6 +1702,11 @@ body::selection {
   padding-bottom: 0.25rem;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -1754,11 +1725,6 @@ body::selection {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
 }
 
 .pb-10 {
@@ -1809,8 +1775,12 @@ body::selection {
   padding-top: 10rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-center {
@@ -1820,11 +1790,6 @@ body::selection {
 .text-base-white {
   --tw-text-opacity: 1;
   color: hsl(var(--white), var(--tw-text-opacity));
-}
-
-.text-blue-700 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--blue-700), var(--tw-text-opacity));
 }
 
 .text-blue-800 {
@@ -1887,16 +1852,6 @@ body::selection {
   color: hsl(var(--purple-800), var(--tw-text-opacity));
 }
 
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--red-500), var(--tw-text-opacity));
-}
-
-.text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--yellow-500), var(--tw-text-opacity));
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1911,6 +1866,11 @@ body::selection {
 
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1988,10 +1948,9 @@ body::selection {
   display: block;
 }
 
-.before\:bg-red-500::before {
+.before\:inline::before {
   content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--red-500), var(--tw-bg-opacity));
+  display: inline;
 }
 
 .hover\:-translate-y-4:hover {
