fix el padding top del footer

--- a/public/styles.css
+++ b/public/styles.css
@@ -703,6 +703,36 @@ body::selection {
   }
 }
 
+.container-footer {
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+@media (min-width: 768px) {
+  .container-footer {
+    max-width: 48rem;
+    grid-template-columns: repeat(8, minmax(0, 1fr));
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
+
+@media (min-width: 1248px) {
+  .container-footer {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -717,6 +747,7 @@ body::selection {
 
 @media (min-width: 768px) {
   .container {
+    max-width: 48rem;
     grid-template-columns: repeat(8, minmax(0, 1fr));
     -moz-column-gap: 4rem;
          column-gap: 4rem;
@@ -790,20 +821,6 @@ body::selection {
 
 @media (min-width: 768px) {
   .p-base {
-    font-size: 1.063rem;
-    line-height: 180%;
-    font-weight: 400;
-  }
-}
-
-.\!p-base {
-  font-size: .938rem;
-  line-height: 180%;
-  font-weight: 400;
-}
-
-@media (min-width: 768px) {
-  .\!p-base {
     font-size: 1.063rem;
     line-height: 180%;
     font-weight: 400;
@@ -1431,6 +1448,10 @@ body::selection {
   height: 4rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -1447,14 +1468,6 @@ body::selection {
   height: 100%;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
 .w-14 {
   width: 3.5rem;
 }
@@ -1463,16 +1476,28 @@ body::selection {
   width: 4rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-32 {
   width: 8rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.flex-initial {
+  flex: 0 1 auto;
+}
+
+.shrink {
+  flex-shrink: 1;
+}
+
 .grow {
   flex-grow: 1;
+}
+
+.grow-0 {
+  flex-grow: 0;
 }
 
 .translate-y-\[30\%\] {
@@ -1579,6 +1604,12 @@ body::selection {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1612,6 +1643,11 @@ body::selection {
   border-bottom-width: 2px;
 }
 
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--gray-100), var(--tw-border-opacity));
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: hsl(var(--gray-200), var(--tw-border-opacity));
@@ -1621,17 +1657,12 @@ body::selection {
   border-color: hsl(var(--gray-800), 5%);
 }
 
-.border-gray-900\/\[8\%\] {
-  border-color: hsl(var(--gray-900), 8%);
-}
-
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: hsl(var(--gray-100), var(--tw-border-opacity));
-}
-
 .border-gray-900\/\[5\%\] {
   border-color: hsl(var(--gray-900), 5%);
+}
+
+.border-gray-900\/\[8\%\] {
+  border-color: hsl(var(--gray-900), 8%);
 }
 
 .bg-gray-100 {
@@ -1652,6 +1683,10 @@ body::selection {
   background-color: hsl(var(--gray-800), 3%);
 }
 
+.bg-gray-900\/\[1\.5\%\] {
+  background-color: hsl(var(--gray-900), 1.5%);
+}
+
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--green-200), var(--tw-bg-opacity));
@@ -1660,10 +1695,6 @@ body::selection {
 .bg-purple-300 {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--purple-300), var(--tw-bg-opacity));
-}
-
-.bg-gray-900\/\[1\.5\%\] {
-  background-color: hsl(var(--gray-900), 1.5%);
 }
 
 .fill-base-white {
@@ -1727,6 +1758,10 @@ body::selection {
   padding-bottom: 2rem;
 }
 
+.pb-0 {
+  padding-bottom: 0px;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1751,6 +1786,10 @@ body::selection {
   padding-bottom: 0.75rem;
 }
 
+.pb-32 {
+  padding-bottom: 8rem;
+}
+
 .pb-40 {
   padding-bottom: 10rem;
 }
@@ -1773,14 +1812,6 @@ body::selection {
 
 .pt-40 {
   padding-top: 10rem;
-}
-
-.pb-32 {
-  padding-bottom: 8rem;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
 }
 
 .text-center {
@@ -1864,13 +1895,13 @@ body::selection {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+.drop-shadow-md {
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
