--- a/app/globals.css
+++ b/app/globals.css
@@ -208,8 +208,12 @@
 		@apply mx-auto grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
 	}
 
+	.container-footer {
+		@apply mx-auto tablet:max-w-3xl grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
+	}
+
 	.container {
-		@apply mx-auto pt-[156px] desktop:pt-[272px] grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
+		@apply mx-auto tablet:max-w-3xl pt-[156px] desktop:pt-[272px] grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
 	}
 
 	.responsive-sections {
