--- a/public/styles.css
+++ b/public/styles.css
@@ -1468,10 +1468,6 @@ body::selection {
   height: 100%;
 }
 
-.w-14 {
-  width: 3.5rem;
-}
-
 .w-16 {
   width: 4rem;
 }
@@ -1590,6 +1586,12 @@ body::selection {
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1598,10 +1600,6 @@ body::selection {
 
 .rounded {
   border-radius: 0.25rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
 }
 
 .rounded-\[1\.25em\] {
@@ -1616,12 +1614,20 @@ body::selection {
   border-radius: 9999px;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
 .border-y-\[1px\] {
   border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+
+.border-b {
   border-bottom-width: 1px;
 }
 
@@ -1685,10 +1691,6 @@ body::selection {
 
 .fill-base-white {
   fill: hsl(var(--white), 1);
-}
-
-.fill-gray-700 {
-  fill: hsl(var(--gray-700), 1);
 }
 
 .fill-gray-900 {
@@ -1802,6 +1804,10 @@ body::selection {
 
 .text-center {
   text-align: center;
+}
+
+.leading-\[120\%\] {
+  line-height: 120%;
 }
 
 .text-base-white {
@@ -1981,6 +1987,10 @@ body::selection {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:border:hover {
+  border-width: 1px;
+}
+
 .hover\:border-2:hover {
   border-width: 2px;
 }
@@ -2047,12 +2057,6 @@ body::selection {
   background-color: hsl(var(--red-300), var(--tw-bg-opacity));
 }
 
-.hover\:before\:bg-purple-300:hover::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--purple-300), var(--tw-bg-opacity));
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2067,6 +2071,10 @@ body::selection {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:border:active {
+  border-width: 1px;
 }
 
 .active\:border-2:active {
@@ -2114,10 +2122,6 @@ body::selection {
 
 .active\:text-red-500\/70:active {
   color: hsl(var(--red-500), 0.7);
-}
-
-.active\:text-purple-500\/70:active {
-  color: hsl(var(--purple-500), 0.7);
 }
 
 .active\:duration-500:active {
