--- a/public/styles.css
+++ b/public/styles.css
@@ -423,7 +423,7 @@ video {
 }
 
 @font-face {
-  font-family: 'ui';
+  font-family: 'body';
 
   src: url('../public/fonts/dm-sans-bold.woff2') format('woff2');
 
@@ -435,7 +435,7 @@ video {
 }
 
 @font-face {
-  font-family: 'ui';
+  font-family: 'body';
 
   src: url('../public/fonts/dm-sans-italic.woff2') format('woff2');
 
@@ -447,7 +447,7 @@ video {
 }
 
 @font-face {
-  font-family: 'ui';
+  font-family: 'body';
 
   src: url('../public/fonts/dm-sans-regular.woff2') format('woff2');
 
@@ -486,90 +486,10 @@ video {
 }
 
 :root {
-  --white: 0deg, 0%, 100%;
-  --gray-100: 222deg, 25%, 10%;
-  --gray-200: 222deg, 25%, 13%;
-  --gray-600: 222deg, 14%, 52%;
-  --gray-700: 222deg, 10%, 70%;
-  --gray-800: 222deg, 12%, 82%;
-  --gray-900: 222deg, 2%, 94%;
-  --blue-200: 222deg, 24%, 19%;
-  --blue-300: 222deg, 40%, 20%;
-  --blue-500: 215deg, 95%, 65%;
-  --blue-700: 216deg, 25%, 70%;
-  --blue-800: 215deg, 67%, 94%;
-  --blue-900: 215deg, 90%, 98%;
-  --orange-200: 23deg, 15%, 17%;
-  --orange-300: 26deg, 37%, 25%;
-  --orange-500: 24deg, 93%, 65%;
-  --green-200: 148deg, 15%, 17%;
-  --green-300: 148deg, 37%, 15%;
-  --green-500: 148deg, 81%, 50%;
-  --green-700: 149deg, 12%, 56%;
-  --green-800: 148deg, 31%, 80%;
-  --green-900: 150deg, 80%, 98%;
-  --purple-200: 254deg, 14%, 18%;
-  --purple-300: 254deg, 38%, 19%;
-  --purple-500: 251deg, 99%, 78%;
-  --purple-700: 251deg, 11%, 60%;
-  --purple-800: 250deg, 29%, 84%;
-  --purple-900: 248deg, 80%, 98%;
-  --red-200: 346deg, 15%, 13%;
-  --red-300: 345deg, 38%, 16%;
-  --red-500: 346deg, 86%, 66%;
-  --red-700: 345deg, 9%, 58%;
-  --red-800: 344deg, 24%, 82%;
-  --red-900: 346deg, 87%, 97%;
-  --yellow-200: 42deg, 15%, 17%;
-  --yellow-300: 41deg, 37%, 25%;
-  --yellow-500: 41deg, 88%, 74%;
-  --yellow-700: 39deg, 9%, 58%;
-  --yellow-800: 41deg, 26%, 81%;
-  --yellow-900: 38deg, 80%, 98%;
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --white: 0deg, 0%, 100%;
-    --gray-100: 220deg, 60%, 99%;
-    --gray-200: 220deg, 73%, 97%;
-    --gray-600: 221deg, 11%, 51%;
-    --gray-700: 223deg, 14%, 39%;
-    --gray-800: 222deg, 19%, 31%;
-    --gray-900: 221deg, 24%, 24%;
-    --blue-200: 212deg, 90%, 96%;
-    --blue-300: 213deg, 100%, 94%;
-    --blue-500: 215deg, 94%, 50%;
-    --blue-700: 215deg, 33%, 44%;
-    --blue-800: 215deg, 35%, 31%;
-    --blue-900: 215deg, 54%, 24%;
-    --orange-200: 25deg, 90%, 96%;
-    --orange-300: 25deg, 95%, 92%;
-    --orange-500: 25deg, 79%, 43%;
-    --green-200: 138deg, 62%, 96%;
-    --green-300: 147deg, 50%, 93%;
-    --green-500: 148deg, 68%, 37%;
-    --green-700: 148deg, 19%, 44%;
-    --green-800: 148deg, 15%, 31%;
-    --green-900: 149deg, 24%, 24%;
-    --purple-200: 250deg, 67%, 96%;
-    --purple-300: 250deg, 94%, 96%;
-    --purple-500: 250deg, 95%, 64%;
-    --purple-700: 250deg, 18%, 55%;
-    --purple-800: 251deg, 20%, 40%;
-    --purple-900: 251deg, 24%, 33%;
-    --red-200: 348deg, 56%, 96%;
-    --red-300: 346deg, 94%, 94%;
-    --red-500: 345deg, 60%, 53%;
-    --red-700: 345deg, 16%, 52%;
-    --red-800: 344deg, 20%, 37%;
-    --red-900: 345deg, 24%, 30%;
-    --yellow-200: 24deg, 71%, 96%;
-    --yellow-300: 41deg, 94%, 93%;
-    --yellow-500: 41deg, 90%, 32%;
-    --yellow-700: 41deg, 16%, 46%;
-    --yellow-800: 40deg, 15%, 31%;
-    --yellow-900: 41deg, 24%, 24%;
   }
 }
 
@@ -577,6 +497,19 @@ video {
 }
 
 /* Scroll thumb styles */
+
+/* .scrollbar::-webkit-scrollbar {
+		@apply w-0;
+	}
+	.scrollbar::-webkit-scrollbar-thumb {
+		@apply bg-gray-200 rounded-full;
+	}
+	.scrollbar::-webkit-scrollbar-thumb:active {
+		@apply bg-red-700;
+	}
+	.scrollbar::-webkit-scrollbar-thumb:hover {
+		@apply bg-blue-500;
+	} */
 
 /* Scroll track styles (Background) */
 
@@ -588,7 +521,7 @@ p,
 	li,
 	button,
 	span {
-  font-family: ui, sans-serif;
+  font-family: body, sans-serif;
   --tw-text-opacity: 1;
   color: hsl(var(--gray-700), var(--tw-text-opacity));
 }
@@ -602,26 +535,6 @@ h1,
   font-family: heading, sans-serif;
   --tw-text-opacity: 1;
   color: hsl(var(--gray-900), var(--tw-text-opacity));
-}
-
-body::-webkit-scrollbar {
-  width: 0px;
-}
-
-body::-webkit-scrollbar-thumb {
-  border-radius: 9999px;
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--gray-200), var(--tw-bg-opacity));
-}
-
-body::-webkit-scrollbar-thumb:active {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--red-700), var(--tw-bg-opacity));
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--blue-500), var(--tw-bg-opacity));
 }
 
 body::-webkit-scrollbar-track {
@@ -962,28 +875,6 @@ body::selection {
   }
 }
 
-.link-large {
-  font-size: 1.125rem;
-  line-height: 180%;
-  font-weight: 400;
-}
-
-@media (min-width: 768px) {
-  .link-large {
-    font-size: 1.313rem;
-    line-height: 180%;
-    font-weight: 400;
-  }
-}
-
-.link-large {
-  cursor: pointer;
-  --tw-text-opacity: 1;
-  color: hsl(var(--gray-800), var(--tw-text-opacity));
-  text-decoration-line: underline;
-  text-underline-offset: 2px;
-}
-
 .link-button-base {
   font-size: .938rem;
   line-height: 180%;
@@ -1011,11 +902,6 @@ body::selection {
   color: hsl(var(--blue-500), var(--tw-text-opacity));
 }
 
-.link-color-red {
-  --tw-text-opacity: 1;
-  color: hsl(var(--red-500), var(--tw-text-opacity));
-}
-
 .link-color-purple {
   --tw-text-opacity: 1;
   color: hsl(var(--purple-500), var(--tw-text-opacity));
@@ -1024,17 +910,6 @@ body::selection {
 .link-color-green {
   --tw-text-opacity: 1;
   color: hsl(var(--green-500), var(--tw-text-opacity));
-}
-
-.divider-blue {
-  height: 0.75rem;
-  stroke: hsl(var(--blue-500), 1);
-}
-
-@media (min-width: 768px) {
-  .divider-blue {
-    height: 1rem;
-  }
 }
 
 .divider-red {
@@ -1048,28 +923,6 @@ body::selection {
   }
 }
 
-.divider-purple {
-  height: 0.75rem;
-  stroke: hsl(var(--purple-500), 1);
-}
-
-@media (min-width: 768px) {
-  .divider-purple {
-    height: 1rem;
-  }
-}
-
-.divider-orange {
-  height: 0.75rem;
-  stroke: hsl(var(--orange-500), 1);
-}
-
-@media (min-width: 768px) {
-  .divider-orange {
-    height: 1rem;
-  }
-}
-
 .divider-gray {
   height: 0.75rem;
   stroke: hsl(var(--gray-600), 1);
@@ -1079,124 +932,6 @@ body::selection {
   .divider-gray {
     height: 1rem;
   }
-}
-
-.hero-gray {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-gray {
-    grid-column: span 6 / span 6;
-    grid-column-start: 2;
-    margin-left: -4rem;
-    margin-right: -4rem;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-@media (min-width: 1248px) {
-  .hero-gray {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-  }
-}
-
-.hero-gray {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-gray {
-    grid-column: span 6 / span 6;
-    grid-column-start: 2;
-    margin-left: -4rem;
-    margin-right: -4rem;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-@media (min-width: 1248px) {
-  .hero-gray {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-  }
-}
-
-.hero-gray {
-  border-color: hsl(var(--gray-900), 5%);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--gray-200), var(--tw-bg-opacity));
-}
-
-.hero-mini-green {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-mini-green {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-.hero-mini-green {
-  border-color: hsl(var(--green-900), 5%);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--green-200), var(--tw-bg-opacity));
-}
-
-.hero-mini-purple {
-  grid-column: span 4 / span 4;
-  grid-column-start: 1;
-  margin-left: -2.5rem;
-  margin-right: -2.5rem;
-  margin-bottom: 8rem;
-  padding: 2.5rem;
-}
-
-@media (min-width: 768px) {
-  .hero-mini-purple {
-    grid-column: span 8 / span 8;
-    grid-column-start: 3;
-    border-radius: 2rem;
-    border-width: 2px;
-    padding: 4rem;
-  }
-}
-
-.hero-mini-purple {
-  border-color: hsl(var(--purple-900), 5%);
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--purple-200), var(--tw-bg-opacity));
 }
 
 *, ::before, ::after {
@@ -1315,10 +1050,6 @@ body::selection {
   }
 }
 
-.static {
-  position: static;
-}
-
 .fixed {
   position: fixed;
 }
@@ -1329,10 +1060,6 @@ body::selection {
 
 .relative {
   position: relative;
-}
-
-.-inset-0 {
-  inset: -0px;
 }
 
 .bottom-6 {
@@ -1388,14 +1115,6 @@ body::selection {
   margin-bottom: 3rem;
 }
 
-.mb-14 {
-  margin-bottom: 3.5rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
 .mb-24 {
   margin-bottom: 6rem;
 }
@@ -1436,16 +1155,8 @@ body::selection {
   display: none;
 }
 
-.h-0 {
-  height: 0px;
-}
-
 .h-12 {
   height: 3rem;
-}
-
-.h-14 {
-  height: 3.5rem;
 }
 
 .h-16 {
@@ -1492,16 +1203,6 @@ body::selection {
   flex-grow: 0;
 }
 
-.translate-y-\[30\%\] {
-  --tw-translate-y: 30%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.scale-y-\[150\%\] {
-  --tw-scale-y: 150%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .cursor-not-allowed {
   cursor: not-allowed;
 }
@@ -1512,14 +1213,6 @@ body::selection {
 
 .resize {
   resize: both;
-}
-
-.list-inside {
-  list-style-position: inside;
-}
-
-.list-disc {
-  list-style-type: disc;
 }
 
 .grid-cols-2 {
@@ -1618,20 +1311,12 @@ body::selection {
   border-radius: 9999px;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-2 {
   border-width: 2px;
 }
 
 .border-y-\[1px\] {
   border-top-width: 1px;
-  border-bottom-width: 1px;
-}
-
-.border-b {
   border-bottom-width: 1px;
 }
 
@@ -1675,10 +1360,6 @@ body::selection {
   background-color: hsl(var(--gray-200), var(--tw-bg-opacity));
 }
 
-.bg-gray-800\/\[3\%\] {
-  background-color: hsl(var(--gray-800), 3%);
-}
-
 .bg-gray-900\/\[1\.5\%\] {
   background-color: hsl(var(--gray-900), 1.5%);
 }
@@ -1686,15 +1367,6 @@ body::selection {
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--green-200), var(--tw-bg-opacity));
-}
-
-.bg-purple-300 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--purple-300), var(--tw-bg-opacity));
-}
-
-.fill-base-white {
-  fill: hsl(var(--white), 1);
 }
 
 .fill-gray-900 {
@@ -1790,10 +1462,6 @@ body::selection {
   padding-bottom: 1.5rem;
 }
 
-.pb-\[56\.25\%\] {
-  padding-bottom: 56.25%;
-}
-
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1812,16 +1480,6 @@ body::selection {
 
 .leading-\[120\%\] {
   line-height: 120%;
-}
-
-.text-base-white {
-  --tw-text-opacity: 1;
-  color: hsl(var(--white), var(--tw-text-opacity));
-}
-
-.text-blue-800 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--blue-800), var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1849,55 +1507,14 @@ body::selection {
   color: hsl(var(--green-500), var(--tw-text-opacity));
 }
 
-.text-green-700 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--green-700), var(--tw-text-opacity));
-}
-
-.text-green-900 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--green-900), var(--tw-text-opacity));
-}
-
-.text-orange-500 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--orange-500), var(--tw-text-opacity));
-}
-
-.text-purple-500 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--purple-500), var(--tw-text-opacity));
-}
-
-.text-purple-700 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--purple-700), var(--tw-text-opacity));
-}
-
-.text-purple-800 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--purple-800), var(--tw-text-opacity));
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .drop-shadow-lg {
   --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.drop-shadow-md {
-  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -1927,10 +1544,6 @@ body::selection {
 
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 .duration-700 {
@@ -1980,19 +1593,10 @@ body::selection {
   display: inline;
 }
 
-.hover\:-translate-y-4:hover {
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:border:hover {
-  border-width: 1px;
 }
 
 .hover\:border-2:hover {
@@ -2035,14 +1639,6 @@ body::selection {
   color: hsl(var(--gray-700), var(--tw-text-opacity));
 }
 
-.hover\:duration-500:hover {
-  transition-duration: 500ms;
-}
-
-.hover\:ease-out:hover {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
 .hover\:before\:bg-blue-300:hover::before {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
@@ -2064,21 +1660,6 @@ body::selection {
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.active\:-translate-y-4:active {
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.active\:scale-105:active {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.active\:border:active {
-  border-width: 1px;
 }
 
 .active\:border-2:active {
@@ -2128,10 +1709,6 @@ body::selection {
   color: hsl(var(--red-500), 0.7);
 }
 
-.active\:duration-500:active {
-  transition-duration: 500ms;
-}
-
 .group:hover .group-hover\:fill-base-white {
   fill: hsl(var(--white), 1);
 }
@@ -2153,22 +1730,6 @@ body::selection {
 }
 
 @media (min-width: 768px) {
-  .tablet\:col-span-1 {
-    grid-column: span 1 / span 1;
-  }
-
-  .tablet\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .tablet\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .tablet\:col-start-3 {
-    grid-column-start: 3;
-  }
-
   .tablet\:-mx-16 {
     margin-left: -4rem;
     margin-right: -4rem;
@@ -2198,20 +1759,12 @@ body::selection {
     height: 3.5rem;
   }
 
-  .tablet\:h-16 {
-    height: 4rem;
-  }
-
   .tablet\:max-w-3xl {
     max-width: 48rem;
   }
 
   .tablet\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .tablet\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .tablet\:items-center {
@@ -2239,33 +1792,8 @@ body::selection {
     border-color: hsl(var(--gray-900), 5%);
   }
 
-  .tablet\:hover\:bg-gray-200:hover {
-    --tw-bg-opacity: 1;
-    background-color: hsl(var(--gray-200), var(--tw-bg-opacity));
-  }
-
   .tablet\:hover\:bg-gray-900\/\[1\.5\%\]:hover {
     background-color: hsl(var(--gray-900), 1.5%);
-  }
-
-  .group:hover .tablet\:group-hover\:underline {
-    text-decoration-line: underline;
-  }
-
-  .group:hover .tablet\:group-hover\:decoration-red-500 {
-    text-decoration-color: hsl(var(--red-500), 1);
-  }
-
-  .group:hover .tablet\:group-hover\:decoration-2 {
-    text-decoration-thickness: 2px;
-  }
-
-  .group:hover .tablet\:group-hover\:decoration-\[0\.125em\] {
-    text-decoration-thickness: 0.125em;
-  }
-
-  .group:hover .tablet\:group-hover\:underline-offset-4 {
-    text-underline-offset: 4px;
   }
 
   .group:hover .tablet\:group-hover\:before\:bg-blue-300::before {
